# pose-nudge

./: .all-contributorsrc  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_issue.yml  feature_request.yml
.github/workflows/: release.yml
locales/: en.json  ja.json  ko.json  zh.json
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  pose_analysis.rs
src/components/: Dashboard.tsx  NotificationSystem.tsx  SettingsPage.tsx  WebcamCapture.tsx
src/lib/: db.ts
src/locales/en/: translation.json
src/locales/ja/: translation.json
src/locales/ko/: translation.json
src/locales/zh/: translation.json
