[package]
name = "pose-nudge"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pose_nudge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
image = "0.25.8"
base64 = "0.22"
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
ndarray = "0.16"
anyhow = "1.0"
log = "0.4.28"
tauri-plugin-log = { version = "2.0.0-beta", features = ["colored"] }
env_logger = "0.11"
dirs = "6.0.0"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
imageproc = "0.25"
thiserror = "2.0.16" # 에러 처리를 위해 추가
tauri-plugin-store = "2"
tauri-plugin-fs = "2.0.0-beta.5"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
nokhwa = { version = "0.10.9", features = ["input-native", "output-threaded"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] } 

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
